--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,6 +9,6 @@ jobs:
 
     steps:
       -  name: Check out the code
-      -  uses: actions/checkout@v2
+         uses: actions/checkout@v2
   
     
